k8s/categories-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: categories-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: categories
    template:
        metadata:
            labels:
                app: categories
        spec:
            containers:
                - name: categories
                  #image: us.gcr.io/inventory-dev-292712/categories
                  image: registry.cloud.okteto.net/dr-drake/categories:node
