k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: products-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: products
    template:
        metadata:
            labels:
                app: products
        spec:
            containers:
                - name: products
                  #image: us.gcr.io/inventory-dev-292712/products
                  image: registry.cloud.okteto.net/dr-drake/products:node
