k8s/accounts-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: accounts-srv
spec:
    type: ClusterIP
    selector:
        app: accounts
    ports:
        - name: accounts
          protocol: TCP
          port: 8080
          targetPort: 8080
