k8s/branches-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: branches-srv
spec:
    type: ClusterIP
    selector:
        app: branches
    ports:
        - name: branches
          protocol: TCP
          port: 7578
          targetPort: 7578
