k8s/categories-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: categories-srv
spec:
    type: ClusterIP
    selector:
        app: categories
    ports:
        - name: categories
          protocol: TCP
          port: 7577
          targetPort: 7577
