k8s/images-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: images-srv
spec:
    type: ClusterIP
    selector:
        app: images
    ports:
        - name: images
          protocol: TCP
          port: 7579
          targetPort: 7579
