k8s/products-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: products-srv
spec:
    type: ClusterIP
    selector:
        app: products
    ports:
        - name: products
          protocol: TCP
          port: 7576
          targetPort: 7576
